# antifraud2gis

./: .gitignore  README.md  pyproject.toml
contrib/: create.sql  dump_customcfg.py
src/antifraud2gis/: aliases.py  company.py  companydb.py  compare.py  const.py  db.py  exceptions.py  fraud.py  logger.py  main.py  relation.py  review.py  search.py  session.py  settings.py  statistics.py  tasks.py  user.py  utils.py
src/antifraud2gis/cli/: af2web.py  af2worker.py  company.py  dev.py  main.py  summary.py  user.py
src/antifraud2gis/cli/api/: router.py
src/antifraud2gis/fd/: emptyuser.py  fd.py  master.py  medianage.py  medianrpu.py  relation.py
src/antifraud2gis/js-extension/templates/: error.html  loading.html
src/antifraud2gis/pages/: about.md  anomaly.md  credits.md  disclaimer.md
src/antifraud2gis/static/: styles.css
src/antifraud2gis/static/js/: app.js
src/antifraud2gis/templates/: base.html  index.html  markdown.html  miss.html  nocompany.html  progress.html  report.html  search.html
