[project]
name = "antifraud2gis"
version = "0.1.1"
dependencies = [
    "requests",
    "loguru",
    "rich",
    "argalias",
    "python-dotenv",
    "numpy",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "dramatiq[redis, watch]",
    "markdown",
    "python-frontmatter"
    ]
requires-python = ">=3.8"
authors = [{ name = "Yaroslav Polyakov", email = "yaroslaff@gmail.com" }]

[project.urls]
Homepage = "https://github.com/yaroslaff/scrape2gis"
Repository = "https://github.com/yaroslaff/scrape2gis"


[project.scripts]
af2gis = "antifraud2gis.cli.main:main"
af2dev = "antifraud2gis.cli.dev:main"
af2worker = "antifraud2gis.cli.af2worker:main"
af2web = "antifraud2gis.cli.af2web:main"

[build-system]
# requires = ["setuptools"]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
